# investidor10-sheets-automation

./: README.md  pyproject.toml
.github/workflows/: headless-test.yaml  run-automation.yaml
src/: main.py
src/config/: variables.py
src/google_sheets/: auth.py  client.py  reader.py
src/services/: entry_service.py  web_automation_service.py
src/web_automation/: browser.py  session.py
src/web_automation/pages/: __init__.py  base.py  login.py  wallet.py
