[project]
name = "investidor10-sheets-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "pendulum>=3.1.0",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
